# oct_levitation

./: CMakeLists.txt  LICENSE  README.md  launch_command.txt  package.xml  setup.py
config/: controller_params.yaml  experiment_analysis_params.yaml  free_body_sim_params.yaml  general_params.yaml
config/rqt_multiplot/: rqt_multiplot_bronzefill_ring_23gm.xml  rqt_multiplot_bronzefill_ring_27gm.xml  rqt_multiplot_currents.xml  rqt_multiplot_greentec_pro_do80_di67.xml  rqt_multiplot_jasan_levitator.xml  rqt_multiplot_onyx_50x5.xml  rqt_multiplot_onyx_50x5_augmented_disc_pose.xml  rqt_multiplot_onyx_80x15_pose.xml  rqt_multiplot_onyx_80x7_5_pose.xml  rqt_multiplot_pose_config.xml  rqt_multiplot_rp_control_config.xml  rqt_multiplot_sim_pose_config.xml  rqt_multiplot_xyz_rp_control_config.xml  rqt_multiplot_yaw_control_config.xml  rqt_multiplot_z_control_config.xml  rqt_multiplot_z_rp_control_config.xml  rqt_multiplot_z_yaw_control_config.xml
config/rviz/: single_dipole_control_config.rviz
docs/: rtprio_permissions.md
include/oct_levitation/: common.h  controller.h  kalman_filter.h
launch/: control_pipeline_base.launch  experiment_analysis.launch  experiment_recording.launch  linear_x_control.launch  linear_y_control.launch  linear_z_control.launch  linear_z_controller.launch  linear_z_controller_sim.launch  reduced_attitude_control.launch  rp_control_com_wrench.launch  tnb_mns_driver.launch  xyz_normal_control_com_wrench.launch  xyz_rp_control_com_wrench.launch  xyz_rp_inertial_ft_control_com_wrench.launch  yaw_control_com_wrench.launch  z_control_com_wrench.launch  z_yaw_control_com_wrench.launch
msg/: ControllerDetails.msg  Float64MultiArrayStamped.msg  PID1DState.msg  RigidBodyStateEstimate.msg  VectorStamped.msg
scripts/: controller.cpp  gravity_compensation.py  linear_1d_controller.py  linear_1d_lqri.py  linear_5d_decoupled_origin_controller.py  lqri_torque_control.py  lqri_xyz_control.py  lqri_z_control.py  system_component_analysis.py  torque_control.py  ultimate_final_controller_node.cpp  ultimate_final_controller_node.hpp  ultimate_final_kalman_filter.cpp  xyz_reduced_attitude_single_dipole.py
scripts/filters_and_estimators/: sskf_delay_compensator.py
scripts/five_dof_controllers/: xyz_normal_angles_inertial_ft_single_dipole.py  xyz_reduced_attitude_single_dipole.py  xyz_rp_inertial_ft_single_dipole.py  xyz_rp_single_dipole.py
scripts/normal_orientation_controllers/: single_dipole_body_fixed_reduced_attitude_control.py  single_dipole_reduced_attitude_control.py  single_dipole_rp_control.py
scripts/utils/: actual_wrench_calculator.py  clock_publisher.py  coil_subset_condition_calculator.py  condition_number_plot.py  control_input_delay_sim.py  delay_measurement.py  dynamics_simulator.py  euler_pose_converter.py  experiment_analysis.py  experiment_data_summarizer.py  experiment_recorder.py  fake_pose_publisher.py  fft_noise_analysis.py  free_rigid_body_simulatior.py  free_rigid_body_simulator.py  joy_setpoint.py  matlab_sim_driver.py  offline_nonlinear_simulator.py  reduced_attitude_visualizer.py  reference_pose_publisher.py  rviz_visualizations.py  sim_driver_simulink_pose_republisher.py  subscriber_filter,py  tf_republisher.py
scripts/utils/offline_sim_analysis/: offline_sim_mass_sweep.py
scripts/xy_controllers/: x_control_single_dipole_full_alloc.py  y_control_single_dipole_full_alloc.py
scripts/yaw_controllers/: yaw_control_com_gen_alloc.py  yaw_control_com_wrench.py
scripts/z_controllers/: z_control_com_gen_alloc.py  z_control_com_wrench.py  z_control_single_dipole_simplified.py  z_rp_control_single_dipole.py  z_yaw_control_com_gen_alloc.py
src/oct_levitation/: analysis.py  common.py  control_node.py  controller.cpp  controllers.py  dynamics.py  filters.py  geometry.py  geometry_jit.py  kalman_filter.cpp  mechanical.py  numerical.py  plotting.py  processing_utils.py  rigid_bodies.py  simple_offline_sim.py  trajectories.py
src/oct_levitation/ext/: LICENSE  bagreader.py
