<?xml version="1.0"?>
<package format="2">
  <name>oct_levitation</name>
  <version>1.0.0</version>
  <description>The oct_levitation package</description>

  <maintainer email="sneelaksh@ethz.ch">Neelaksh Singh</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/TheGodOfWar007/oct_levitation.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>mag_manip</depend>
  <depend>control_utils</depend>
  <depend>tnb_mns_driver</depend>
  <depend>vicon_bridge</depend>
  <depend>std_msgs</depend>
  <depend>oct_ctrl</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
